welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:13: error: not found: value reculer
    reculer()
    ^FlowerPot:16: error: not found: value reculer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
  ^FlowerPot:16: error: not found: value reculer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
             ^FlowerPot:16: error: not found: value reculer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
                        ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
                                             ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
                                                        ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
                                                                                                     ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
                                                                                                                ^FlowerPot:16: error: not found: value avancer
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
                                                                                                                           ^