welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def faireFleur(c:Color){
  setCouleurBrosse(c); baisseBrosse()
  avance(); avance(); avance(); recule(); gauche(); recule(); avance(); avance(); recule
  leveBrosse()
  setCouleurBrosse(Color.yellow); baisseBrosse(); leveBrosse()
  droite()
}


def motif(){
  faireFleur(Color.red); avance(); avance(); avance(); faireFleur(Color.cyan)
  for (i <- 1 to 5){
    reculer()
  }
  droite(); avance(); avance(); gauche(); avance(); avance(); avance(); faireFleur(Color.orange)
  reculer(); reculer(); reculer(); droite(); avancer(); avancer(); gauche(); faireFleur(Color.pink); avancer(); avancer(); avancer(); faireFleur(Color.green)
}